# Processing-Document

ocr-project/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
ocr-project/alembic/: env.py
ocr-project/alembic/versions/: 52c513e8b120_initial_migration.py  f370356ed716_create_user_table.py
ocr-project/app/: main.py
ocr-project/app/api/endpoints/: files.py  tasks.py
ocr-project/app/constant/: constant.py
ocr-project/app/core/: config.py
ocr-project/app/db/: dependencies.py  session.py
ocr-project/app/models/: __init__.py  file.py  page_result.py  task.py
ocr-project/app/repository/: file_repository.py  page_result_repository.py  task_repository.py
ocr-project/app/services/file/: file_service.py
ocr-project/app/services/minio/: minio_service.py
ocr-project/app/storage/: file_storage.py  result_storage.py
ocr-project/app/type/: error.py
ocr-project/app/worker/: celery.py  file_process_worker.py
ocr-project/test/: test_upload.py
